<resources>
    <string name="title_merge">Merge from</string>
    <string name="title_merged">Merged already</string>
    <string name="title_export_to_excel">Export Survey Data to Excel</string>
    <string name="title_remove">Remove</string>
    <string name="title_change_date">Change date</string>
    <string name="title_force_sync">Force sync</string>
    <string name="label_load_survey">Load partially saved Survey</string>
    <string name="label_choose">Choose</string>
    <string name="title_choose_context">Choose context</string>
    <string name="title_choose_op_mode">Choose operating mode</string>
    <string name="title_main_menu">Pacific EMIS Education\nSurvey Tool</string>
    <string name="label_settings">Settings (%s)</string>
    <string name="title_wash">Water, Sanitation and Hygiene</string>
    <string name="label_logo">Logotype</string>
    <string name="label_debug_storage">DEBUG: show storage</string>
    <string name="label_context">Context</string>
    <string name="label_name">Name</string>
    <string name="title_input_name">Input Name</string>
    <string name="label_contact">Contact</string>
    <string name="title_input_contact">Input Contact</string>
    <string name="label_mode">Operating mode</string>
    <string name="label_import_schools">Import schools from CSV</string>
    <string name="label_load_schools">Update schools from %s API</string>
    <string name="label_load_teachers">Update teachers from %s API</string>
    <string name="label_load_subjects">Update subjects from %s API</string>
    <string name="label_load_prod_certificate">Load Production Certificate</string>
    <string name="label_export_folder">Export Folder</string>
    <string name="label_templates">Templates of surveys</string>
    <string name="label_force_remote_settings">Force fetch remote settings</string>
    <string name="label_tablet_id">Tablet ID</string>
    <string name="label_license">Software License</string>
    <string name="label_format_debug_info">Build %1$s(%2$d)</string>
    <string name="label_change_password">Change master password</string>
    <string name="label_sign_in">Log In with Google account</string>
    <string name="label_sign_out">Log out</string>
    <string name="label_passwords">Master Password</string>
    <string name="title_enter_the_master_password">Enter the master password</string>
    <string name="title_confirm_the_master_password">Confirm the master password</string>
    <string name="error_passwords_not_match">Passwords not match</string>
    <string name="error_password_is_too_short">Password must have at least eight characters</string>
    <string name="app_center_key">d424eec5-93ab-4dbd-aa21-ea1dd6b38eaa</string>
    <string name="label_merge_survey">Merge survey</string>
    <string name="label_start_session">Start session</string>
    <string name="label_end_session">End session</string>
    <string name="title_get_remote_survey">Send (partial) survey to another device (typically to the team leader)</string>
    <string name="label_set_default_logo">Set default logo</string>
    <string name="label_change_logo">Change logo</string>
    <string name="label_change_master_password">Change master password</string>
    <string name="hint_master_password">Enter master password to open settings</string>
    <string name="hint_app_context">Choose the Context to start survey</string>
    <string name="label_account">Account</string>
    <string name="hint_login_required">Login with Google account to create a survey</string>
    <string name="title_choose_app_to_open">Choose an application to open with:</string>
    <string name="label_creation_hint">No existing surveys yet\nTo create a Survey, click on the button on the right</string>
    <string name="label_load_sa_template">Import School Accreditation Template of survey</string>
    <string name="label_load_wash_template">Import Water, Sanitation and Hygiene Template of survey</string>
    <string name="title_format_templates">Templates of %1$s surveys</string>
    <string name="label_ability_to_export">Ability to export survey to Excel</string>
    <string name="label_hint_merge_mode">This turns your tablet into merging mode. You only have to do this if you are worker using a secondary tablet and you want to submit your work with the team leader\'s primary tablet.</string>
    <string name="remote_fetch_result_success">New values have been fetched from Remote Settings</string>
    <string name="remote_fetch_result_failure">New values haven\'t been found in Remote Settings</string>
    <string name="toast_prod_cert_loaded">Production Certificate Loaded</string>
    <string name="title_info">Info</string>
    <string name="message_nothing_to_export">Nothing to export</string>
    <string name="format_exported_to">Surveys export file downloaded to %1$s</string>
    <string name="error_no_app_to_open">Unable to open file: suitable application not installed</string>
    <string name="message_prompt_fetch_remote">App Context is changed. Do you want to force fetch remote settings for this context?</string>
    <string name="message_merged">The survey was merged to another tablet. You do not need to merge anything back into this one.</string>
    <string name="label_logs">Logs</string>
    <string name="title_date">Date</string>
    <string name="title_school">School</string>
    <string name="title_user">User</string>
    <string name="title_period">Period</string>
    <string name="title_type">Type</string>
    <string name="title_description">Description</string>
    <string name="title_tablet_id">Tablet ID:</string>
    <string name="title_school_id">School ID:</string>
    <string name="title_date_and_time">Date/Time</string>
    <string name="title_school_name">School Name</string>
</resources>
